--- a/templates/usuario-home.html
+++ b/templates/usuario-home.html
@@ -33,14 +33,14 @@
                                 <!-- The user image in the navbar-->
                                 <img src="dist/img/muni-santiago-160x160.png" class="user-image" alt="User Image">
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                                <span class="hidden-xs">Juan Tapia</span>
+                                <span class="hidden-xs">{{ request.user.get_full_name }}</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- The user image in the menu -->
                                 <li class="user-header">
                                     <!-- <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"> -->
                                     <img src="dist/img/muni-santiago-160x160.png" class="img-circle" alt="User Image">
-                                    <p>Juan Tapia</p>
+                                    <p>{{ request.user.get_full_name }}</p>
                                 </li>
                                 <!-- Menu Footer-->
                                 <li class="user-footer">
@@ -76,7 +76,7 @@
                         </div>
                         <div class="pull-left info">
                             <!-- <br> -->
-                            <p>Juan Tapia</p>
+                            <p>{{ request.user.get_full_name }}</p>
                         </div>
                     </div>
                     <li class="treeview active menu-open">
