fixed minor bugs

--- a/templates/muni-lista-denuncias.html
+++ b/templates/muni-lista-denuncias.html
@@ -90,13 +90,13 @@
                         </a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="#">
+                                <a href="{% url 'estadisticas' %}">
                                     <i class="fa fa-circle-o"></i>
                                     Denuncias
                                 </a>
                             </li>
-                            <li class="active">
-                                <a href="muni-estadisticas-ongs.html">
+                            <li>
+                                <a href="{% url 'homeMunicipalidad' %}">
                                     <i class="fa fa-circle-o"></i>
                                     ONG
                                 </a>
