--- a/templates/modifyDenuncia.html
+++ b/templates/modifyDenuncia.html
@@ -90,7 +90,7 @@
                         </a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="#">
+                                <a href="{% url 'estadisticas' %}">
                                     <i class="fa fa-circle-o"></i>
                                     Denuncias
                                 </a>
