--- a/templates/muni-estadisticas-ongs-ong.html
+++ b/templates/muni-estadisticas-ongs-ong.html
@@ -5,8 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="wrapper">
-        <!-- Main Header -->
+    <!-- Main Header -->
         <header class="main-header">
             <!-- Logo -->
             <a href="#" class="logo">
@@ -25,20 +24,21 @@
                 <!-- Navbar Right Menu -->
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
-                        <!-- User Account Menu -->
+                       <!-- User Account Menu -->
                         <li class="dropdown user user-menu">
                             <!-- Menu Toggle Button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <!-- The user image in the navbar-->
-                                <img src="dist/img/muni-santiago-160x160.png" class="user-image" alt="User Image">
+                                <img src="{% static 'img/santiagologo.jpg' %}"class="user-image" alt="User Image">
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                                <span class="hidden-xs">M. de Santiago</span>
+                                <span class="hidden-xs">M. de {{ user.first_name }}</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- The user image in the menu -->
                                 <li class="user-header">
-                                    <img src="dist/img/muni-santiago-160x160.png" class="img-circle" alt="User Image">
-                                    <p>Municipalidad de Santiago</p>
+                                    <!-- <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"> -->
+                                    <img src="{% static 'img/santiagologo.jpg' %}" class="img-circle" alt="User Image">
+                                    <p>Municipalidad de {{ user.first_name }}</p>
                                 </li>
                                 <!-- Menu Footer-->
                                 <li class="user-footer">
@@ -48,12 +48,11 @@
                                         </button>
                                     </div>
                                     <div class="pull-right">
-                                        <a href="login.html" class="btn btn-default btn-flat">Salir</a>
+                                        <a href="{% url 'logout' %}"  class="btn btn-default btn-flat">Salir</a>
                                     </div>
                                 </li>
                             </ul>
                         </li>
-                        <!-- ./user-menu -->
                     </ul>
                 </div>
             </nav>
@@ -65,17 +64,18 @@
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel">
                     <div class="pull-left image">
-                        <img src="{% static 'dist/img/muni-santiago-160x160.png' %}" class="img-circle" alt="User Image">
+                        <img src="{% static 'img/santiagologo.jpg' %}" class="img-circle" alt="User Image">
                     </div>
                     <div class="pull-left info">
-                        <p>Municipalidad de<br>Santiago</p>
+                        <!-- <br> -->
+                        <p>Municipalidad de<br>{{ user.first_name }}</p>
                     </div>
                 </div>
                 <!-- Sidebar Menu -->
                 <ul class="sidebar-menu" data-widget="tree">
                     <!-- Optionally, you can add icons to the links -->
                     <li>
-                        <a href="#">
+                        <a href= "{% url 'listaDenuncias'  %}">
                             <i class="fa fa-bullhorn"></i>
                             <span>Denuncias</span>
                         </a>
@@ -90,13 +90,13 @@
                         </a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="#">
+                                <a href="{% url 'estadisticas' %}">
                                     <i class="fa fa-circle-o"></i>
                                     Denuncias
                                 </a>
                             </li>
-                            <li>
-                                <a href="muni-estadisticas-ongs.html">
+                            <li class="active">
+                                <a href="{% url 'homeMunicipalidad' %}">
                                     <i class="fa fa-circle-o"></i>
                                     ONG
                                 </a>
