--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="{% url 'animales' %}">
                             <i class="fa fa-star"></i>
                             <span>ONG</span>
                         </a>
